Fix styling of form submit buttons on iOS
close #36

--- a/sites/all/themes/rebound/sass/_forms.scss
+++ b/sites/all/themes/rebound/sass/_forms.scss
@@ -42,6 +42,7 @@ label.option
         border-bottom: 2px solid #13578d;
         border-radius: 4px;
         cursor: pointer;
+        -webkit-appearance: none;
     }
 }
 .form-required
